first commit with logo nav and heading

--- a/index.html
+++ b/index.html
@@ -5,116 +5,43 @@
     </head>
     <body>
         <!-- PAGE -->
-        <div id="page">
+        <div id="gym-tonic-web-page">
             <!-- HEADER -->
-            <div class="header">
+            <div id="gym-tonic-header">
                 <div class="row-large">
                     <div class="col span-3-of-12">
-                        <img src="images/logo-airbnb.png">
+                        <img src="images/logo-gym-tonic.png" alt="logo gymtonic" />
                     </div> 
                     <div class="col span-6-of-12">
                     </div>
                     <div class="col-right span-3-of-12">
                         <ul class="nav-utility">
-                            <li>Become a Host</li>
-                            <li>Help</li>
-                            <li>Sign Up</li>
-                            <li>Log In</li>
+                            <li>Tone Up</li>
+                            <li>Dance</li>
+                            <li>Relax</li>
+                            <li>Join In</li>
                         </ul>
                     </div> 
                 </div>
-            </div>
-            <!-- HEADER END -->
-            <!-- CONTENT -->
-            <div class="content">
                 <div class="row">
                     <div class="col span-6-of-12">
-                        <h1>Airbnb
+                        <h1>Gym Tonic
                             <div>
-                                Book unique homes and experience a city like a local.
+                                Get as fit as a fiddle.
                             </div>
                         </h1>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col span-6-of-12">
-                        <form>
-                            
-                        </form>
-                    </div>
-                </div>
-                <div class="row">
-                    <ul class="nav-links">
-                        <li>FOR YOU</li>
-                        <li>HOMES</li>
-                        <li>EXPERIENCES</li>
-                        <li>PLACES</li>
-                    </ul>
-                </div>
-                <div class="row">
-                    <h2>Experiences</h2>
-                </div>
-                <div class="row">
-                </div>
-                <div class="row">
-                    <h2>Homes</h2>
-                </div>
-                <div class="row">
-                </div>
-                <div class="row">
-                    <h2>Featured destinations</h2>
-                </div>
-                <div class="row">
-                </div>
-                <div class="row">
-                    <h2>Art & Design experiences</h2>
-                </div>
-                <div class="row">
-                </div>
-                <div class="row">
-                    <h2>Places in London</h2>
-                </div>
-                <div class="row">
-                </div>
-                <div class="row">
-                    <h2>Fashion experiences</h2>
-                </div>
-                <div class="row">
-                </div>
-                <div class="row">
-                    <h2>Places in Sydney</h2>
-                </div>
-                <div class="row">
-                </div>
-                <div class="row">
-                    <h2>Entertainment experiences</h2>
-                </div>
-                <div class="row">
-                </div>
-                <div class="row">
-                    <h2>Places in Seoul</h2>
-                </div>
-                <div class="row">
-                </div>
-                <div class="row">
-                    <h2>Sports experiences</h2>
-                </div>
-                <div class="row">
-                </div>
-                <div class="row">
-                    <h2>Places in Havana</h2>
-                </div>
-                <div class="row">
-                </div>
-                <div class="row">
-                    <h2>Wellness experiences</h2>
-                </div>
+            </div>
+            <!-- HEADER END -->
+            <!-- CONTENT -->
+            <div id="gym-tonic-content">
                 <div class="row">
                 </div>
             </div>
             <!-- CONTENT END -->
             <!-- FOOTER -->
-            <div class="footer">
+            <div id="gym-tonic-footer">
                 <div class="row">
                 </div>
                 <div class="row">
